--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="src/styles.css" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+
+  <title>Vanilla Weather App</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="weather-app-wrapper">
+      <div class="weather-app">
+        <form id="search-form" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input type="search" placeholder="City..." class="form-control" id="city-input" autocomplete="off" />
+            </div>
+            <div class="col-3">
+              <input type="submit" value="search" class="btn btn-primary w-100" />
+            </div>
+          </div>
+        </form>
+        <div class="center">
+          <div class="row">
+            <div class="col-4">
+              <div class="overview">
+                <h1 id="city">Oslo</h1>
+                <ul>
+                  <li>updated: <span id="date"></span></li>
+                  <li id="description"></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-4">
+              <img src="https://ssl.gstatic.com/onebox/weather/64/rain_light.png" alt="weather-icon" id="icon"
+                class="float-left" />
+            </div>
+            <div class="col-4">
+              <div class="d-flex weather-temp justify-content-center">
+                <div class="float-right">
+                  <span id="temperature">16</span><span class="units">°C</span>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center">
+                <ul>
+                  <li>Feels like: <span id="feels-like">15</span>°C</li>
+                  <li>Humidity:<span id="humidity">27</span>%</li>
+                  <li>Wind:<span id="wind">2</span> Km/H</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div class="weather-forecast" id="Forecast"></div>
+        <footer>
+          <small>
+            <a href="https://github.com/lirosm/Vanilla-weather-app" target="_blank">
+              Open-source code</a>
+            , by Liriona Osmani
+          </small>
+        </footer>
+      </div>
+    </div>
+  </div>
+  <script src="src/weatherSearch.js"></script>
+</body>
+
 </html>
